# web_UNAE_project

./: LICENSE  README.md  database_setup.sql  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  uwsgi.ini
backend/database/: achievements.py  clases.py  connection.py  game_sessions.py  levels.py  metrics.py  user_achievements.py  users.py
backend/tests/: conftest.py  test_api-users.py  test_api_clases.py  test_api_misc.py  test_database.py
backend/tests-selenium/test_dashboard/: dashboard-test-2.py  dashboard_test2_final.side
backend/tests-selenium/test_login/: Login.side  test_Login.py
db/: Dockerfile  dump_clean.sql  dump_raw.sql  init.sql
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/components/: AnalyticsDashboard.jsx  ClassDetail.jsx  ClassManager.jsx  LoginForm.jsx  LoginFormMiguel.jsx  PlayerDetail.jsx  RecentGamesTable.jsx  RegisterFormMiguel.jsx  RegistroForm.jsx
frontend/src/pages/: dashboard.astro  detalle-clase.astro  graficas.astro  login.astro  loginMiguel.astro  recent-games.astro  registerMiguel.astro  registro.astro  resume-player.astro
